--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
 
 dependencies {
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 }
 
@@ -64,11 +63,13 @@ dependencies {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.3.1'
 }
+
 
 
