--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,43 +33,26 @@ android {
 }
 
 dependencies {
-
-    //noinspection GradleCompatible
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    implementation fileTree(dir: 'libs', includes: ['*.jar'])
-    //noinspection GradleCompatible
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-}
+    implementation 'com.android.support:multidex:1.0.3'
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.3')
+    implementation 'com.google.firebase:firebase-database'
 
-dependencies {
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
-}
-
-dependencies {
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-}
-
-dependencies {
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    //Glide ImageLoader
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.3.1'
+    //KProHUD Progress
+    implementation 'com.kaopiz:kprogresshud:1.2.0'
+    // Circle Imageview
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
+
+
 
 
 
